--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@
   padding: 0;
   list-style: none;
   outline: none;
+  // box-sizing: border-box;
   font-family: 'Roboto', -apple-system, system-ui, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -23,8 +24,39 @@
   &__sidebar {
     background-color: #f4f6f8;
     width: 200px;
-    height: 100%;
+    height: calc(100% - 120px);
     border-right: 1px solid #f1f1f1;
     padding: 60px 20px;
+  }
+}
+
+.field {
+  box-sizing: border-box;
+  background: #FFFFFF;
+  border: 1px solid #EFEFEF;
+  border-radius: 4px;
+  padding: 8px 12px;
+  width: 100%;
+
+  &:focus {
+    border-color: #000;
+  }
+}
+
+.button {
+  border: none;
+  color: #fff;
+  font-weight: 500;
+  padding: 10px 20px;
+  background: #4DD599;
+  border-radius: 4px;
+  cursor: pointer;
+
+  &:hover {
+    background: darken(#4DD599, 10%)
+  }
+
+  &:active {
+    background: darken(#4DD599, 20%)
   }
 }
