--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -1,4 +1,6 @@
 .list {
+  $self: &;
+
   margin-bottom: 30px;
 
   &__add-button {
@@ -9,11 +11,35 @@
     }
   }
 
+  &__remove-icon {
+    opacity: 0;
+  }
+
   li {
     display: flex;
     align-items: center;
     cursor: pointer;
     padding: 10px 12px;
+
+    &:hover #{$self}__remove-icon {
+      opacity: 0.2;
+    }
+
+    #{$self}__remove-icon {
+      opacity: 0;
+  
+      &:hover {
+        opacity: 0.8;
+      }
+    }
+
+    span {
+      flex: 1
+    }
+
+    &:hover {
+      background: rgba(255, 255, 255, 0.5);
+    }
 
     &.active {
       background: #FFFFFF;
