--- a/src/components/Tasks/Tasks.scss
+++ b/src/components/Tasks/Tasks.scss
@@ -33,8 +33,11 @@
       display: flex;
       align-items: center;
 
-      p {
+      input {
+        width: 100%;
         margin-left: 15px;
+        border: 0;
+        font-size: 16px;
       }
     }
   }
@@ -60,6 +63,14 @@
       display: none;
     }
 
+    svg {
+      transition: opacity 0.15s ease-in-out;
+      
+      path {
+        stroke: #f2f2f2;
+      }
+    }
+
     // только при чекнутом чекбоксе (невидимом) делаем зеленый цвет + белая галочка всегда активна
     input:checked + label {
       background-color: #4dd599;
@@ -83,13 +94,12 @@
       border-radius: 30px;
       width: 20px;
       height: 20px;
+      transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 
       svg {
         opacity: 0;
         left: 1px;
       }
     }
-
-
   }
 }
