--- a/src/components/Tasks/Tasks.scss
+++ b/src/components/Tasks/Tasks.scss
@@ -1,4 +1,5 @@
 .tasks {
+  
   &__title {
     font-family: 'Montserrat';
     font-style: normal;
@@ -9,6 +10,16 @@
     border-bottom: 1px solid #F2F2F2;
     padding-bottom: 10px;
 
+    img {
+      opacity: 0;
+      cursor: pointer;
+      margin-left: 15px;
+  
+      &:hover {
+        opacity: 0.8;
+      }
+    }
+
     &:hover {
       img {
         opacity: 0.2;
@@ -16,18 +27,21 @@
     }
   }
 
-  img {
-    opacity: 0;
-    cursor: pointer;
-    margin-left: 15px;
-
-    &:hover {
-      opacity: 0.8;
-    }
-  }
-
   &__items {
     margin-top: 30px;
+
+    h2 {
+      font-family: 'Montserrat';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 22px;
+      color: #C9D1D3;
+
+      text-align: center;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+    }
 
     &-row {
       display: flex;
@@ -39,6 +53,43 @@
         margin-left: 15px;
         border: 0;
         font-size: 16px;
+      }
+    }
+
+  }
+
+  &__form {
+
+    margin-top: 15px;
+
+    &-block {
+      
+      button {
+        margin-right: 10px;
+        margin-top: 15px;
+      }
+    }
+
+    &-new {
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      opacity: 0.4;
+      transition: opacity 0.15s ease-in-out;
+
+      &:hover {
+        opacity: 0.8;
+      }
+
+      img {
+        width: 16px;
+        height: 16px;
+        margin-left: 4px;
+      }
+
+      span {
+        font-size: 16px;
+        margin-left: 19px;
       }
     }
   }
